testcrate/tests/ui/sql_table_duplicate.stderr
warning: No primary key found
  --> $DIR/sql_table_duplicate.rs:31:8
   |
31 | struct Table {
   |        ^^^^^

error: duplicate definition of table `Table`
  --> $DIR/sql_table_duplicate.rs:38:12
   |
38 |     struct Table {
   |            ^^^^^

warning: No primary key found
  --> $DIR/sql_table_duplicate.rs:38:12
   |
38 |     struct Table {
   |            ^^^^^

error: aborting due to previous error

